--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionaldatabarpositiveformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionaldatabarpositiveformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData:interface'
-    summary: '<span data-ttu-id="edfce-101">一个用于更新 ConditionalDataBarPositiveFormat 对象上的数据的接口，可用于`conditionalDataBarPositiveFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="edfce-101">An interface for updating data on the ConditionalDataBarPositiveFormat object, for use in `conditionalDataBarPositiveFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="edfce-102">.</span><span class="sxs-lookup"><span data-stu-id="edfce-102"></span></span>'
+    summary: '一个用于更新 ConditionalDataBarPositiveFormat 对象上的数据的接口，可用于`conditionalDataBarPositiveFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
     fullName: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData#gradientFill:member'
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData#borderColor:member'
     summary: |-
-      <span data-ttu-id="edfce-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="edfce-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="edfce-104">"" （空字符串）如果没有边框存在或未设置。</span><span class="sxs-lookup"><span data-stu-id="edfce-104">"" (empty string) if no border is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 "" （空字符串）如果没有边框存在或未设置。
 
-      <span data-ttu-id="edfce-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="edfce-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
     fullName: borderColor
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData#fillColor:member'
     summary: |-
-      <span data-ttu-id="edfce-106">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="edfce-106">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="edfce-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="edfce-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
     fullName: fillColor
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData#gradientFill:member'
     summary: |-
-      <span data-ttu-id="edfce-108">该布尔值表示 DataBar 是否具有渐变。</span><span class="sxs-lookup"><span data-stu-id="edfce-108">Boolean representation of whether or not the DataBar has a gradient.</span></span>
+      指定 DataBar 是否具有渐变。
 
-      <span data-ttu-id="edfce-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="edfce-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientFill
     fullName: gradientFill
     langs:
