--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styledata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.styledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.StyleData:interface'
-    summary: <span data-ttu-id="151cd-101">描述通过调用返回的数据的接口`style.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="151cd-101">An interface describing the data returned by calling `style.toJSON()`</span></span><!-- --><span data-ttu-id="151cd-102">.</span><span class="sxs-lookup"><span data-stu-id="151cd-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`style.toJSON()`<!-- -->.
     name: Excel.Interfaces.StyleData
     fullName: Excel.Interfaces.StyleData
     langs:
@@ -32,9 +32,9 @@ items:
       - 'excel!Excel.Interfaces.StyleData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.StyleData#borders:member'
     summary: |-
-      <span data-ttu-id="151cd-103">四个 Border 对象的 Border 集合，表示四个边框的样式。</span><span class="sxs-lookup"><span data-stu-id="151cd-103">A Border collection of four Border objects that represent the style of the four borders.</span></span>
+      四个 Border 对象的 Border 集合，表示四个边框的样式。
 
-      <span data-ttu-id="151cd-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.StyleData#borders~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleData#builtIn:member'
     summary: |-
-      <span data-ttu-id="151cd-105">指示样式是否为内置样式。</span><span class="sxs-lookup"><span data-stu-id="151cd-105">Indicates if the style is a built-in style.</span></span>
+      指定样式是否为内置样式。
 
-      <span data-ttu-id="151cd-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: builtIn
     fullName: builtIn
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#fill:member'
     summary: |-
-      <span data-ttu-id="151cd-107">样式的填充。</span><span class="sxs-lookup"><span data-stu-id="151cd-107">The Fill of the style.</span></span>
+      样式的填充。
 
-      <span data-ttu-id="151cd-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -77,9 +77,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
   - uid: 'excel!Excel.Interfaces.StyleData#font:member'
     summary: |-
-      <span data-ttu-id="151cd-109">该 Font 对象表示样式的字体。</span><span class="sxs-lookup"><span data-stu-id="151cd-109">A Font object that represents the font of the style.</span></span>
+      该 Font 对象表示样式的字体。
 
-      <span data-ttu-id="151cd-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -92,9 +92,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontData:interface'
   - uid: 'excel!Excel.Interfaces.StyleData#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="151cd-111">指示工作表受保护时是否隐藏公式。</span><span class="sxs-lookup"><span data-stu-id="151cd-111">Indicates if the formula will be hidden when the worksheet is protected.</span></span>
+      指定在工作表处于保护状态时是否隐藏公式。
 
-      <span data-ttu-id="151cd-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -107,9 +107,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="151cd-113">表示样式水平对齐。</span><span class="sxs-lookup"><span data-stu-id="151cd-113">Represents the horizontal alignment for the style.</span></span> <span data-ttu-id="151cd-114">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="151cd-114">See Excel.HorizontalAlignment for details.</span></span>
+      表示样式水平对齐。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="151cd-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -122,9 +122,9 @@ items:
           - 'excel!Excel.Interfaces.StyleData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleData#includeAlignment:member'
     summary: |-
-      <span data-ttu-id="151cd-116">指示样式是否包含 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-116">Indicates if the style includes the AutoIndent, HorizontalAlignment, VerticalAlignment, WrapText, IndentLevel, and TextOrientation properties.</span></span>
+      指定样式是否包括 AutoIndent、HorizontalAlignment、VerticalAlignment、WrapText、IndentLevel 和 TextOrientation 属性。
 
-      <span data-ttu-id="151cd-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeAlignment
     fullName: includeAlignment
     langs:
@@ -137,9 +137,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#includeBorder:member'
     summary: |-
-      <span data-ttu-id="151cd-118">指示样式是否包含 Color、ColorIndex、LineStyle 和 Weight 边框属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-118">Indicates if the style includes the Color, ColorIndex, LineStyle, and Weight border properties.</span></span>
+      指定样式是否包含 Color、ColorIndex、LineStyle 和权数边框属性。
 
-      <span data-ttu-id="151cd-119">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-119">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeBorder
     fullName: includeBorder
     langs:
@@ -152,9 +152,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#includeFont:member'
     summary: |-
-      <span data-ttu-id="151cd-120">指示样式是否包含 Background、Bold、Color、ColorIndex、FontStyle、Italic、Name、Size、Strikethrough、Subscrip、Superscript 和 Underline 字体属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-120">Indicates if the style includes the Background, Bold, Color, ColorIndex, FontStyle, Italic, Name, Size, Strikethrough, Subscript, Superscript, and Underline font properties.</span></span>
+      指定样式是否包括背景、粗体、颜色、ColorIndex、FontStyle、斜体、名称、大小、删除线、下标、上标和下划线字体属性。
 
-      <span data-ttu-id="151cd-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeFont
     fullName: includeFont
     langs:
@@ -167,9 +167,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#includeNumber:member'
     summary: |-
-      <span data-ttu-id="151cd-122">指示样式是否包含 NumberFormat 属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-122">Indicates if the style includes the NumberFormat property.</span></span>
+      指定样式是否包含 NumberFormat 属性。
 
-      <span data-ttu-id="151cd-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeNumber
     fullName: includeNumber
     langs:
@@ -182,9 +182,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#includePatterns:member'
     summary: |-
-      <span data-ttu-id="151cd-124">指示样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-124">Indicates if the style includes the Color, ColorIndex, InvertIfNegative, Pattern, PatternColor, and PatternColorIndex interior properties.</span></span>
+      指定样式是否包含 Color、ColorIndex、InvertIfNegative、Pattern、PatternColor 和 PatternColorIndex 内部属性。
 
-      <span data-ttu-id="151cd-125">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-125">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includePatterns
     fullName: includePatterns
     langs:
@@ -197,9 +197,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#includeProtection:member'
     summary: |-
-      <span data-ttu-id="151cd-126">指示样式是否包含 FormulaHidden 和 Locked 保护属性。</span><span class="sxs-lookup"><span data-stu-id="151cd-126">Indicates if the style includes the FormulaHidden and Locked protection properties.</span></span>
+      指定样式是否包含 FormulaHidden 和 Locked 保护属性。
 
-      <span data-ttu-id="151cd-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: includeProtection
     fullName: includeProtection
     langs:
@@ -212,9 +212,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#indentLevel:member'
     summary: |-
-      <span data-ttu-id="151cd-128">0 到 250 之间的一个整数，指示样式的缩进水平。</span><span class="sxs-lookup"><span data-stu-id="151cd-128">An integer from 0 to 250 that indicates the indent level for the style.</span></span>
+      0 到 250 之间的一个整数，指示样式的缩进水平。
 
-      <span data-ttu-id="151cd-129">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-129">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -227,9 +227,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.StyleData#locked:member'
     summary: |-
-      <span data-ttu-id="151cd-130">指示工作表受保护时是否锁定对象。</span><span class="sxs-lookup"><span data-stu-id="151cd-130">Indicates if the object is locked when the worksheet is protected.</span></span>
+      指定在工作表处于保护状态时是否锁定对象。
 
-      <span data-ttu-id="151cd-131">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-131">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
@@ -242,9 +242,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#name:member'
     summary: |-
-      <span data-ttu-id="151cd-132">样式的名称。</span><span class="sxs-lookup"><span data-stu-id="151cd-132">The name of the style.</span></span>
+      样式的名称。
 
-      <span data-ttu-id="151cd-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -257,9 +257,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.StyleData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="151cd-134">样式中数字格式的格式代码。</span><span class="sxs-lookup"><span data-stu-id="151cd-134">The format code of the number format for the style.</span></span>
+      样式中数字格式的格式代码。
 
-      <span data-ttu-id="151cd-135">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-135">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -272,9 +272,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.StyleData#numberFormatLocal:member'
     summary: |-
-      <span data-ttu-id="151cd-136">样式中数字格式的本地化格式代码。</span><span class="sxs-lookup"><span data-stu-id="151cd-136">The localized format code of the number format for the style.</span></span>
+      样式中数字格式的本地化格式代码。
 
-      <span data-ttu-id="151cd-137">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-137">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
     fullName: numberFormatLocal
     langs:
@@ -287,9 +287,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.StyleData#readingOrder:member'
     summary: |-
-      <span data-ttu-id="151cd-138">样式中的阅读顺序。</span><span class="sxs-lookup"><span data-stu-id="151cd-138">The reading order for the style.</span></span>
+      样式中的阅读顺序。
 
-      <span data-ttu-id="151cd-139">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-139">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -302,9 +302,9 @@ items:
           - 'excel!Excel.Interfaces.StyleData#readingOrder~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleData#shrinkToFit:member'
     summary: |-
-      <span data-ttu-id="151cd-140">指示文本是否自动缩小以适合可用列宽。</span><span class="sxs-lookup"><span data-stu-id="151cd-140">Indicates if text automatically shrinks to fit in the available column width.</span></span>
+      指定文本是否自动收缩以显示可用列宽。
 
-      <span data-ttu-id="151cd-141">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-141">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -317,9 +317,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.StyleData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="151cd-142">表示样式的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="151cd-142">Represents the vertical alignment for the style.</span></span> <span data-ttu-id="151cd-143">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="151cd-143">See Excel.VerticalAlignment for details.</span></span>
+      指定样式的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="151cd-144">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-144">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -332,9 +332,9 @@ items:
           - 'excel!Excel.Interfaces.StyleData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.StyleData#wrapText:member'
     summary: |-
-      <span data-ttu-id="151cd-145">指示 Microsoft Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="151cd-145">Indicates if Microsoft Excel wraps the text in the object.</span></span>
+      指定 Excel 是否对对象中的文本进行换行。
 
-      <span data-ttu-id="151cd-146">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="151cd-146">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
