--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.runtime.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.runtime.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.Runtime:class'
     summary: |-
-      <span data-ttu-id="ca746-101">表示 Excel 运行时类。</span><span class="sxs-lookup"><span data-stu-id="ca746-101">Represents the Excel Runtime class.</span></span>
+      表示 Excel 运行时类。
 
-      <span data-ttu-id="ca746-102">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ca746-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Runtime
     fullName: Excel.Runtime
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Runtime#context:member'
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.Runtime#set:member(2)'
       - 'excel!Excel.Runtime#toJSON:member(1)'
   - uid: 'excel!Excel.Runtime#context:member'
-    summary: <span data-ttu-id="ca746-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="ca746-103">The request context associated with the object.</span></span> <span data-ttu-id="ca746-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="ca746-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -34,7 +34,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Runtime#load:member(1)'
-    summary: <span data-ttu-id="ca746-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="ca746-106">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="ca746-106">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -48,11 +48,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="ca746-107">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="ca746-107">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.RuntimeLoadOptions:interface'
   - uid: 'excel!Excel.Runtime#load:member(2)'
-    summary: <span data-ttu-id="ca746-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="ca746-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="ca746-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -66,11 +66,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="ca746-110">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-110">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Runtime#load:member(3)'
-    summary: <span data-ttu-id="ca746-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="ca746-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="ca746-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -88,7 +88,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="ca746-113">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-113">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -96,9 +96,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.Runtime#set:member(1)'
-    summary: '<span data-ttu-id="ca746-114">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-114">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="ca746-115">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="ca746-115">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="ca746-116">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="ca746-116">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.Runtime): void`
     name: 'set(properties, options)'
@@ -114,15 +114,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="ca746-117">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-117">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.RuntimeUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="ca746-118">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="ca746-118">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Runtime#set:member(2)'
-    summary: '<span data-ttu-id="ca746-119">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="ca746-119">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -140,7 +140,7 @@ items:
           type:
             - 'excel!Excel.Runtime:class'
   - uid: 'excel!Excel.Runtime#toJSON:member(1)'
-    summary: '<span data-ttu-id="ca746-120">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="ca746-120">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="ca746-121">.</span><span class="sxs-lookup"><span data-stu-id="ca746-121"></span></span> <span data-ttu-id="ca746-122">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="ca746-122"></span></span><!-- --><span data-ttu-id="ca746-123">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 运行时对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.RuntimeData`</span><span class="sxs-lookup"><span data-stu-id="ca746-123">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.Runtime object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RuntimeData`</span></span><!-- --><span data-ttu-id="ca746-124">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="ca746-124">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 运行时对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.RuntimeData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -153,7 +153,7 @@ items:
           - 'excel!Excel.Interfaces.RuntimeData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -163,7 +163,7 @@ references:
     name: Excel.Interfaces.RuntimeLoadOptions
   - uid: 'excel!Excel.Interfaces.RuntimeUpdateData:interface'
     name: Interfaces.RuntimeUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RuntimeData:interface'
     name: Excel.Interfaces.RuntimeData
