--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartareaformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
-    summary: <span data-ttu-id="1fdb9-101">描述通过调用返回的数据的接口`chartAreaFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="1fdb9-101">An interface describing the data returned by calling `chartAreaFormat.toJSON()`</span></span><!-- --><span data-ttu-id="1fdb9-102">.</span><span class="sxs-lookup"><span data-stu-id="1fdb9-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAreaFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAreaFormatData
     fullName: Excel.Interfaces.ChartAreaFormatData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#border:member'
     summary: |-
-      <span data-ttu-id="1fdb9-103">代表图表区域的边框格式，包括颜色、linestyle 和粗细。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-103">Represents the border format of chart area, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="1fdb9-104">只读。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-104">Read-only.</span></span>
+      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="1fdb9-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdb9-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme:member'
     summary: |-
-      <span data-ttu-id="1fdb9-106">返回或设置图表的配色方案。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-106">Returns or sets color scheme of the chart.</span></span> <span data-ttu-id="1fdb9-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-107">Read/Write.</span></span>
+      指定图表的配色方案。
 
-      <span data-ttu-id="1fdb9-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdb9-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: colorScheme
     fullName: colorScheme
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData#colorScheme~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#font:member'
     summary: |-
-      <span data-ttu-id="1fdb9-109">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-109">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span> <span data-ttu-id="1fdb9-110">只读。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-110">Read-only.</span></span>
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="1fdb9-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdb9-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.ChartFontData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData#roundedCorners:member'
     summary: |-
-      <span data-ttu-id="1fdb9-112">指定图表的图表区域是否有圆角。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-112">Specifies whether or not chart area of the chart has rounded corners.</span></span> <span data-ttu-id="1fdb9-113">读/写。</span><span class="sxs-lookup"><span data-stu-id="1fdb9-113">Read/Write.</span></span>
+      指定图表的图表区是否有圆角。
 
-      <span data-ttu-id="1fdb9-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1fdb9-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: roundedCorners
     fullName: roundedCorners
     langs:
