--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapelineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapelineformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
-    summary: '<span data-ttu-id="1eb82-101">一个用于更新 ShapeLineFormat 对象上的数据的接口，可用于`shapeLineFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1eb82-101">An interface for updating data on the ShapeLineFormat object, for use in `shapeLineFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="1eb82-102">.</span><span class="sxs-lookup"><span data-stu-id="1eb82-102"></span></span>'
+    summary: '一个用于更新 ShapeLineFormat 对象上的数据的接口，可用于`shapeLineFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ShapeLineFormatUpdateData
     fullName: Excel.Interfaces.ShapeLineFormatUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#weight:member'
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="1eb82-103">代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="1eb82-103">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="1eb82-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#dashStyle:member'
     summary: |-
-      <span data-ttu-id="1eb82-105">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="1eb82-105">Represents the line style of the shape.</span></span> <span data-ttu-id="1eb82-106">当线条不可见或短划线样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="1eb82-106">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="1eb82-107">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="1eb82-107">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="1eb82-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dashStyle
     fullName: dashStyle
     langs:
@@ -47,9 +47,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#dashStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#style:member'
     summary: |-
-      <span data-ttu-id="1eb82-109">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="1eb82-109">Represents the line style of the shape.</span></span> <span data-ttu-id="1eb82-110">当线条不可见或样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="1eb82-110">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="1eb82-111">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="1eb82-111">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="1eb82-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -62,9 +62,9 @@ items:
           - 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#style~0:complex'
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#transparency:member'
     summary: |-
-      <span data-ttu-id="1eb82-113">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="1eb82-113">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="1eb82-114">当形状的透明度不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="1eb82-114">Returns null when the shape has inconsistent transparencies.</span></span>
+      将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
 
-      <span data-ttu-id="1eb82-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: transparency
     fullName: transparency
     langs:
@@ -77,9 +77,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="1eb82-116">表示形状元素的线条格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="1eb82-116">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="1eb82-117">当形状的可见性不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="1eb82-117">Returns null when the shape has inconsistent visibilities.</span></span>
+      指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
 
-      <span data-ttu-id="1eb82-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData#weight:member'
     summary: |-
-      <span data-ttu-id="1eb82-119">表示线条的粗细（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="1eb82-119">Represents the weight of the line, in points.</span></span> <span data-ttu-id="1eb82-120">当线条不可见或线条粗细不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="1eb82-120">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
+      表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
 
-      <span data-ttu-id="1eb82-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1eb82-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
